# Dehefe-Assistant

./: Dockerfile  depend.md  docker-compose.yml  gemini_client.py  index.html  main.py  pyproject.toml  responses.py
MusicHow/: music.py
api/: package-lock.json  package.json  server.js
api/models/: response.js
calcHow/: calcular.py  soma.py
config/: clean_prompt.py
getApi/: responses.py
googleHow/: google_search.py
tempHow/: temperatura.py
timeHow/: tempo.py
