[tool.poetry]
name = "dehefe assistant"
version = "0.1.0"
description = ""
authors = ["Anderson Rodrigues <eusouanderson@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pyttsx3 = "^2.98"
speechrecognition = "^3.14.0"
sounddevice = "^0.5.1"
pyaudio = "^0.2.14"
flask-socketio = "^5.5.1"
eventlet = "^0.38.2"
unicode = "^2.9"
unidecode = "^1.3.8"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
psutil = "^6.1.1"
wmi = "^1.5.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.28.0"
webdriver-manager = "^4.0.2"
pytube = "^15.0.0"
pygame = "^2.6.1"
yt-dlp = "^2025.1.15"
python-vlc = "^3.0.21203"
googlesearch-python = "^1.3.0"
pytz = "^2024.2"

[tool.poetry.scripts]
start = "poetry run python main.py"

[tool.poetry.group.dev.dependencies]
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
